# rust-yew-web-app

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: app.rs
